[+]basecalling Start script + logs

--- a/templates/index.html
+++ b/templates/index.html
@@ -285,7 +285,7 @@
         }
 
         function startScript() {
-            fetch('/generate_script', {
+            fetch('/start_script', {
                 method: 'POST'
             })
                 .then(response => response.json())
