--- a/templates/anomalie-structure.html
+++ b/templates/anomalie-structure.html
@@ -108,7 +108,7 @@
         <pre><code class="language-bash" id="scriptArea"></code></pre>
         <!-- <button onclick="copyToClipboard()">Copier</button> -->
         <button onclick="downloadScript()" class="btn btn-primary">Télécharger le script sur la machine</button>
-        <button id="runScriptButton" class="btn btn-success">Lancer le script sur la machine</button>
+        <button onclick="startScript()" class="btn btn-success">Lancer le script sur la machine</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -176,6 +176,18 @@
                 })
                 .catch(error => console.error('Error loading configurations:', error));
         }
+
+        function startScript() {
+            fetch('/start_anomalie_structure_script', {
+                method: 'POST'
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Script started:', data);
+                    alert('Script started');
+                })
+                .catch(error => console.error('Error starting script:', error));
+        }
     </script>
     <script>
         function generateAndShowScript() {
@@ -183,7 +195,7 @@
                 .then(response => response.json())
                 .then(data => {
                     const codeBlock = document.getElementById('scriptArea');
-                    codeBlock.textContent = data.script; // Utilisez textContent pour préserver les sauts de ligne
+                    codeBlock.textContent = JSON.parse(data.script); // Utilisez JSON.parse pour décoder le contenu échappé
                     Prism.highlightElement(codeBlock);  // Demandez à Prism de mettre en évidence le nouveau contenu
                 })
                 .catch(error => console.error('Error:', error));
@@ -193,35 +205,6 @@
         function downloadScript() {
             window.location.href = '/download_anomalie_structure_script';
         }
-    </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var socket = io.connect('http://172.16.102.219:5000/anomalie_structure');
-            console.log('Socket.IO status:', typeof io);
-
-            var runButton = document.getElementById('runScriptButton');
-            if (runButton) {
-                runButton.addEventListener('click', function () {
-                    socket.emit('start_script');
-                    console.log('Script start requested.');  // Ajoutez ceci pour débugger
-                });
-            } else {
-                console.error('Run script button not found!');  // Ajoutez ceci pour débugger
-            }
-
-            socket.on('script_output', function (data) {
-                if (data.type === 'stderr') {
-                    console.error(data.message);
-                } else {
-                    console.log(data.message);
-                }
-            });
-
-            socket.on('script_error', function (data) {
-                console.error('Script error:', data.status);  // Affichez le statut de l'erreur
-            });
-        });
-
     </script>
     <script src="/static/js/analyse_count.js"></script>
 </body>
