[+]Calcul moyenne reads Start script + logs

--- a/templates/moyenne-reads.html
+++ b/templates/moyenne-reads.html
@@ -16,6 +16,7 @@
             background-color: #f8f9fa;
             font-family: Arial, sans-serif;
         }
+
         .navbar,
         .subnav {
             background-color: #fff;
@@ -59,7 +60,8 @@
                         <a class="nav-link active" href="#">Available Workflows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount"
+                                class="badge bg-primary">2</span></a>
                     </li>
                 </ul>
             </div>
@@ -72,8 +74,10 @@
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active"><a href="/moyenne-reads">Moyenne des reads Configuration</a></li>
-                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-moyenne-reads">Historique</a>
+                        <li class="breadcrumb-item active"><a href="/moyenne-reads">Moyenne des reads Configuration</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page"><a
+                                href="/history-moyenne-reads">Historique</a>
                         </li>
                     </ol>
                 </nav>
@@ -82,16 +86,25 @@
         </div>
         <form id="configForm">
             <div class="mb-3">
-                <label for="input_file" class="form-label">Selectionnez votre fichier BAM qui est aligné, trié et indéxé :</label>
-                <input type="text" class="form-control" id="input_file" name="input_file" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_aligned_sorted.bam" required>
+                <label for="input_file" class="form-label">Selectionnez votre fichier BAM qui est aligné, trié et indéxé
+                    :</label>
+                <input type="text" class="form-control" id="input_file" name="input_file"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_aligned_sorted.bam"
+                    required>
             </div>
             <div class="mb-3">
-                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre fichier de sortie :</label>
-                <input type="text" class="form-control" id="output_dir" name="output_dir" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot" required>
+                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre
+                    fichier de sortie :</label>
+                <input type="text" class="form-control" id="output_dir" name="output_dir"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot"
+                    required>
             </div>
             <div class="mb-3">
-                <label for="bed_file" class="form-label">Selectionnez votre fichier BED avec vos régions cibles :</label>
-                <input type="text" class="form-control" id="bed_file" name="bed_file" placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/regions.bed" required>
+                <label for="bed_file" class="form-label">Selectionnez votre fichier BED avec vos régions cibles
+                    :</label>
+                <input type="text" class="form-control" id="bed_file" name="bed_file"
+                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/regions.bed"
+                    required>
             </div>
             <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
@@ -102,7 +115,7 @@
         <pre><code class="language-bash" id="scriptArea"></code></pre>
         <!-- <button onclick="copyToClipboard()">Copier</button> -->
         <button onclick="downloadScript()" class="btn btn-primary">Télécharger le script sur la machine</button>
-        <button id="runScriptButton" class="btn btn-success">Lancer le script sur la machine</button>
+        <button onclick="startScript()" class="btn btn-success">Lancer le script sur la machine</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -170,6 +183,18 @@
                 })
                 .catch(error => console.error('Error loading configurations:', error));
         }
+
+        function startScript() {
+            fetch('/start_moyenne_reads_script', {
+                method: 'POST'
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Script started:', data);
+                    alert('Script started');
+                })
+                .catch(error => console.error('Error starting script:', error));
+        }
     </script>
     <script>
         function generateAndShowScript() {
@@ -177,12 +202,13 @@
                 .then(response => response.json())
                 .then(data => {
                     const codeBlock = document.getElementById('scriptArea');
-                    codeBlock.textContent = data.script; // Utilisez textContent pour préserver les sauts de ligne
+                    codeBlock.textContent = JSON.parse(data.script); // Utilisez JSON.parse pour décoder le contenu échappé
                     Prism.highlightElement(codeBlock);  // Demandez à Prism de mettre en évidence le nouveau contenu
                 })
                 .catch(error => console.error('Error:', error));
         }
     </script>
+
     <script>
         function downloadScript() {
             window.location.href = '/download_moyenne_reads_script';
