--- a/templates/status.html
+++ b/templates/status.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/ldrs/dist/auto/helix.js"></script>
 
 
     <style>
@@ -105,7 +106,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-9">
-                <h2>Workflows</h2>
+                <h2>Analyses</h2>
                 <table class="table">
                     <thead>
                         <tr>
@@ -121,9 +122,16 @@
                             <td>{{ workflow.name }}</td>
                             <td>{{ workflow.name }}</td>
                             <td>{{ workflow.launch_date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-                            <td><span
-                                    class="badge bg-{{ 'success' if workflow.status == 'Completed' else 'danger' if workflow.status == 'Failed' else 'secondary' }}">{{
-                                    workflow.status }}</span></td>
+                            <td>
+                                <div style="display: flex; align-items: center;">
+                                    <span class="badge bg-{{ 'success' if workflow.status == 'Completed' else 'danger' if workflow.status == 'Failed' else 'secondary' }}">
+                                        {{ workflow.status }}
+                                    </span>
+                                    {% if workflow.status == 'Running' %}
+                                        <l-helix size="45" speed="2.5" color="#0d6efd" style="transform: rotate(90deg); margin-left: 10px;"></l-helix>
+                                    {% endif %}
+                                </div>
+                            </td>
                         </tr>
                         {% endfor %}
                     </tbody>
