--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -210,6 +210,12 @@
                             <p class="card-text">Ce workflow permet de filtrer les reads selon les régions d'intérêt depuis un fichier BAM trié et indéxé. Il vous faudra
                                 un fichier BED pour spécifier les régions d'intérêt.
                             </p>
+                            <div class="tools-used">
+                                <h6>Outils Utilisés :</h6>
+                                <ul>
+                                    <li>samtools</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </a>
