--- a/templates/infos.html
+++ b/templates/infos.html
@@ -123,8 +123,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">GenomePilot</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -133,11 +132,13 @@
                         <a class="nav-link" aria-current="page" href="/">Installed</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Available Workflows</a>
+                        <a class="nav-link" href="/">Available Workflows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/status">Analyses <span id="runningCount"
-                                class="badge bg-primary">2</span></a>
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">0</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/infos">Infos</a>
                     </li>
                 </ul>
             </div>
@@ -309,6 +310,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="/static/js/analyse_count.js"></script>
     <script>
         document.getElementById('viewScriptBtn').addEventListener('click', function () {
             // Simulate fetching and displaying the script content
