--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -119,7 +119,10 @@
                         <a class="nav-link active" href="#">Available Workflows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">0</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/infos">Infos</a>
                     </li>
                 </ul>
             </div>
@@ -127,36 +130,6 @@
     </nav>
     <div class="scroll-container">
         <div class="container">
-            <div class="info-section">
-                <h2>Bienvenue sur GenomePilot</h2>
-                <p>GenomePilot est une application puissante permettant de créer et d'exécuter divers pipelines pour analyser les données générées par les séquenceurs nanopore. Que vous ayez besoin de déchiffrer des lectures brutes, de fusionner des fichiers BAM, ou de créer des fichiers VCF, GenomePilot simplifie chaque étape du processus.</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Documentation</h5>
-                                <p class="card-text">Consultez notre <a href="https://aleksandre80.gitbook.io/untitled" target="_blank">GitBook</a> pour une documentation complète et des guides sur l'utilisation de GenomePilot.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Code Source</h5>
-                                <p class="card-text">Le code source de GenomePilot est disponible sur <a href="https://github.com/your-repo" target="_blank">GitHub</a>. Contribuez au développement ou explorez le code.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="col-md-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Support</h5>
-                                <p class="card-text">Besoin d'aide ? Consultez notre <a href="https://your-gitbook-link" target="_blank">section support</a> sur GitBook ou rejoignez notre communauté sur <a href="https://discord.com" target="_blank">Discord</a>.</p>
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="mb-4">Workflows</h1>
